<resources>
    <string name="app_name">PenyimpananLokalApp</string>
    <string name="file_name">File Name</string>
    <string name="view">View</string>
    <string name="file_data">File Data</string>
    <string name="file_nama">file name</string>
    <string name="data">data</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="catatan_android_studio">Catatan Android Studio</string>
</resources>